ionos_sbx/caddy-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-proxy
spec:
  type: ClusterIP          
  selector: { app: caddy-proxy }
  ports:
    - { name: forward, port: 8080, targetPort: 8080 }
    - { name: http,    port: 80,   targetPort: 80 }
